# project_chatbot

./: .dockerignore  .gitignore  .pdm-python  Dockerfile  DockerfileProd  docker-compose.yml  dokumentasi.txt  latihan.postman_collection.json  nlp_accuracy.py  pyproject.toml
.env/: pyvenv.cfg
apps/: Chatbot.py  Controllers.py  Data.py  apps.py  decorator.py  models.py  urls.py  utils.py  views.py  views2.py
apps/static/css/: navbar.css  navbar1.css  navbar6.css
apps/templates/: berita.html  dashboard.html  layanan.html  navbar.html
apps/templates/adminku/: answer_false.html  base.html  berita_admin.html  dashboard_admin.html  dosen.html  history.html  intents.html  kategori_interaksi.html  matakuliah.html  navbar.html  panduan.html  pengampu_mk.html  sidebar.html  user.html
apps/templates/login/: login.html  register.html
config/: .env  asgi.py  settings.py  urls.py  views.py  wsgi.py
myenv/: pyvenv.cfg
myenv/Scripts/: activate  activate.bat
nginx/: Dockerfile  web-project-django.conf
projectku/: manage.py
projectku/api/: admin.py  models.py  serializers.py  urls.py  views.py
projectku/api/migrations/: 0001_initial.py
projectku/karyawan/: models.py  urls.py  views.py
projectku/karyawan/migrations/: 0001_initial.py
projectku/projectku/: asgi.py  settings.py  urls.py  views.py  wsgi.py
projectku/templates/: checkin.html  checkout.html  dashboard.html  index.html  login.html  logout.html
src/data_akademik/: Form Penilaian Pembimbing Lapangan Kerja Praktek.docx  panduan kampus.xlsx
src/data_akademik/dokumen/: belajar.docx  form_konversi_nilai_mbkm.docx  form_penilain_dosen_pembimbing_kerja_praktek.docx  form_serah_terima_hasil_kerja_praktik.docx  formulir_lembar_penilaian_magang.docx  formulir_log_book_harian.docx  formulir_pengajuan_judul_proposal_tugas_akhir.docx  formulir_pengajuan_permohonan_surat_pengantar_penelitian.docx  formulir_permohonan_surat_aktif_kuliah.docx  kurikulum_obe.xlsx  mata_kuliah_kurikulum_mbkm.xlsx  panduan_excel.xlsx  panduan_kampus.xlsx
src/dataset/corpus/: agent.json  dialog.json  tif.json
src/dataset/normalization/: normalization.txt
staticfiles/admin/css/: login.css
staticfiles/css/: navbar5.css  styleadmin.css
staticfiles/data_akademik/dokumen/: daftar_dosen_teknologi_informasi.docx  form_permohonan_surat_pengantar_kerja_praktek.docx  form_surat_permohonan_magang.docx  formulir_pernyataan_keaslian_tugas_akhir.doc  formulir_serah_terima_aplikasi_kepada_instansi_mitra.docx  kartu_seminar_kerja_praktek.xlsx  lembar_penilaian_dosen_pendamping_msib.docx  (+1 more)
staticfiles/js/: pagination1.js
(+4 files in other folders)
